--- a/posts/2016-06-04-a-foldr.markdown
+++ b/posts/2016-06-04-a-foldr.markdown
@@ -3,6 +3,7 @@ title: foldr
 author: 주형
 tags: haskell, foldr, 하스켈
 home: haskell
+description: foldr 간단한 설명
 ---
 
 fold는 리스트를 순회하면서 값을 합쳐나가는 함수입니다. 
