Add customTag for 2016-06-07-foldr-presentation

--- a/posts/2016-06-04-a-foldr.markdown
+++ b/posts/2016-06-04-a-foldr.markdown
@@ -1,7 +1,7 @@
 ---
 title: foldr
 author: 주형
-tags: haskell, foldr, 하스켈
+tags: haskell, foldr, 하스켈, 2016-06-07-foldr-presentation
 home: haskell
 description: foldr 간단한 설명
 ---
