--- a/wikis/2019-01-19-a-gpg.markdown
+++ b/wikis/2019-01-19-a-gpg.markdown
@@ -50,7 +50,22 @@ private key 내보내기
 
 ### 비대칭키 복호화
 
+## 사용예
+
+### 이메일
+
+암호화 : 받는 사람의 public key로 암호화하여 이메일을 보내면, 받는 사람의 private key가 있어야만 복하활 수 있다.
+
+서명 : 메일 내용에 대해 서명을 포함해서 보내면, 받는 사람은 이메일 내용이 변조 되었는지 확인할 수 있다.
+
+### 깃
+
+태그나, 커밋에 gpg를 이용한 서명을 추가하여, 확인된 사람이 작업한 내용임을 증명할 수 있다.
+
 ## 참고자료.
 
 * [Github GPG key 만들기](https://help.github.com/articles/generating-a-new-gpg-key/)
 * [tldr gpg 문서](https://github.com/tldr-pages/tldr/blob/master/pages/common/gpg.md)
+* [fsf 이메일 암호화하기](https://emailselfdefense.fsf.org/ko/)
+* [Git - 내 작업에 서명하기](https://git-scm.com/book/ko/v2/Git-%EB%8F%84%EA%B5%AC-%EB%82%B4-%EC%9E%91%EC%97%85%EC%97%90-%EC%84%9C%EB%AA%85%ED%95%98%EA%B8%B0)
+
